--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
