--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "^2.2.9",
     "@vercel/postgres": "^0.5.1",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
