--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "use-debounce": "^10.0.0",
