--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/postgres": "^0.5.1",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
