--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.2.9",
     "@vercel/postgres": "^0.5.1",
+    "aframe": "^1.5.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "firebase": "^10.7.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/aframe": "^1.2.5",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -38,6 +40,7 @@
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.0",
+    "types-aframe-react": "^1.0.2",
     "typescript": "^5"
   }
 }
